@@ -34,6 +34,8 @@ None
 
 Bugs fixed in 3.21.1
 ====================
+[2990734] Changing either whether password history is kept and deleting
+currently saved history now activates the OK Button.
 [2984527] Database preferences (including the Idle Timer setting) now retained
 during a locking minimize to the System Tray.
 [2977941] The password expiry date is now updated during edit if the password
@@ -56,6 +58,9 @@ is Locked, Minimized or "AutoType with Minimize" and then Restored.
 and OK buttons.
 [] Fix errors if importing an XML file with entries with duplicate unique IDs
 (UUID elements).
+[] Remove obsolete preference to "Confirm Deletion of Entries" from the miscellaneous
+Options page. The user has the Undo/Redo feature to cater for this. Users are always
+asked to confirm the deletion of Groups or entries that have aliases or shortcuts.
 
 New Features for 3.21
 =====================
